@@ -18,6 +18,8 @@
 		<scala.binary.version>2.12</scala.binary.version>
 		<spark.version>3.5.0</spark.version>
 		<lucene.version>9.11.0</lucene.version>
+		<!-- Spark 3.5 + Java 17+: StorageUtils / Netty için gerekli; test ve IDE'de de aynı bayraklar kullanılmalı -->
+		<spark.jvm.args>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED -Djava.security.manager=allow</spark.jvm.args>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -98,11 +100,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-sql_${scala.binary.version}</artifactId>
-			<version>${spark.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-mllib_${scala.binary.version}</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
@@ -118,10 +115,23 @@
 			<artifactId>lucene-analysis-common</artifactId>
 			<version>${lucene.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>${spark.jvm.args}</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -138,6 +148,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<jvmArguments>${spark.jvm.args}</jvmArguments>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
